--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,6 @@
             <groupId>org.testng</groupId>
             <artifactId>testng</artifactId>
             <version>6.9.10</version>
-            <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>xml-apis</groupId>
@@ -98,7 +97,7 @@
                 <configuration>
                     <suiteXmlFiles>
                         <suiteXmlFile>
-                            RunTCs\JS\Suite\ApplyJobByFile.xml
+                            RunTCs\amazon\Main.xml
                         </suiteXmlFile>
                     </suiteXmlFiles>
                 </configuration>
